--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: roboto;
+    src: url(../public/fonts/Roboto-VariableFont_wdth\,wght.ttf);
+}
+
+*{
+    font-family:roboto;
+}
